// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let mybug: string = 123;

export var x = { propA: 456, propB: "hello" };

=====================================output=====================================
// @flow

let mybug: string = 123;

export var x = { propA: 456, propB: "hello" };

================================================================================
`;

exports[`focused.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {x} from './dependency';

x.toString();

=====================================output=====================================
// @flow

import { x } from "./dependency";

x.toString();

================================================================================
`;
